fix: fix route error

--- a/山西电力交易平台爬虫脚本提示词.md
+++ b/山西电力交易平台爬虫脚本提示词.md
@@ -34,14 +34,20 @@
 ### 1.4 综合查询 - 供需与约束 - 参数信息
 - 节点分配因子
 
-**导航路径说明（3 层折叠菜单）：**
-- 左侧栏为多级折叠菜单，导航到具体数据页面需依次展开 3 层：
-  1. 第一层（父菜单）：点击**「信息披露」**展开
-  2. 第二层（分类）：在信息披露下展开**「现货出清结果/现货实时数据/现货日前信息/综合查询」**
-  3. 第三层（页面）：点击具体数据页面（如「日前备用总量」）
+**导航路径说明（3 层树形菜单 — el-tree 控件）：**
+- 左侧栏使用 **Element UI 的 el-tree（树形控件）** 渲染，NOT el-menu
+- **DOM 结构**：`#leftMenuTwo > #guide-menu > .el-tree.filter-tree > div[role="treeitem"].el-tree-node`
+- 菜单文本在 `<span title="菜单名">菜单名</span>` 中，使用 `title` 属性精确标识
+- 可点击区域为 `.el-tree-node__content`，展开图标为 `.el-tree-node__expand-icon`
+- 展开状态通过 `aria-expanded="true"` 和 `is-expanded` class 判断
+- 叶子节点的 expand-icon 有 `is-leaf` class
+- 导航到具体数据页面需依次展开 3 层：
+  1. 第一层（父节点）：展开**「信息披露」**树节点
+  2. 第二层（分类节点）：在信息披露下展开**「现货出清结果/现货实时数据/现货日前信息/综合查询」**
+  3. 第三层（叶子节点）：点击具体数据页面（如「日前备用总量」）
 - 完整路径示例：`信息披露 > 现货出清结果 > 日前备用总量`
 - 综合查询下路径更深：`信息披露 > 综合查询 > 供需与约束 > 参数信息 > 节点分配因子`
-- 折叠菜单为**点击切换**（toggle）模式，重复点击会收起，需做状态追踪避免误操作
+- 树形菜单为**点击切换**（toggle）模式，重复点击会收起，**必须检查 `aria-expanded` 属性避免误操作**
 - 面包屑可验证路径：页面顶部显示 `当前位置：首页 > 信息披露 > {分类} > {页面}`
 
 ---
