fix: fix route error

--- a/山西电力交易平台爬虫脚本提示词.md
+++ b/山西电力交易平台爬虫脚本提示词.md
@@ -57,7 +57,10 @@
 ### 2.1 数据获取
 
 #### 2.1.1 浏览器与访问
-- 使用 **Chrome** 进行网页访问和操作
+- **运行环境：** 服务器上已有 Chrome 浏览器处于打开状态，且已通过登录认证进入系统首页
+- **连接方式：** 脚本通过 **Chrome DevTools Protocol (CDP)** 连接到已有 Chrome，直接操作已打开的页面，不启动新浏览器、不重新登录
+  - Chrome 需以 `--remote-debugging-port=9222` 参数启动
+  - 脚本结束后只断开连接，不关闭浏览器
 - 处理单页应用（SPA）的动态加载，在导航、筛选、查询后增加显式等待
 
 #### 2.1.2 导航与筛选
@@ -150,7 +153,7 @@
 ## 3. 技术要求
 
 - **语言：** Python
-- **浏览器控制：** Selenium 或 Playwright + Chrome
+- **浏览器控制：** Playwright + Chrome（通过 CDP 连接已有浏览器实例）
 - **解析库：** BeautifulSoup、lxml 等
 - **动态内容：** 支持等待元素、网络空闲等
 - **配置：** 支持配置文件（爬取参数、日期范围、执行频率等）
