fix: fix time selector error

--- a/山西电力交易平台爬虫脚本提示词.md
+++ b/山西电力交易平台爬虫脚本提示词.md
@@ -66,10 +66,10 @@
 #### 2.1.2 导航与筛选
 - 通过左侧栏及内容区子菜单自动定位并访问各数据类别页面
 - 处理所有筛选条件：
-  - **日期**：`YYYY-MM-DD` 格式，绝大多数页面仅支持**单日期**选择
+  - **日期**：必须使用 `YYYY-MM-DD` 格式（如 `2025-06-01`），绝大多数页面仅支持**单日期**选择；页面使用 Element UI 的 **el-date-editor**，标签「日期」与输入框在同一 **el-form-item** 内，定位时应以表单项为单位查找 input，避免误匹配或结构差异导致设置失败。
   - **下拉选项**（按页面）：
     - 断面名称：实时输电断面约束及阻塞、断面约束情况及影子价格、重要通道实际输电情况
-    - 节点名称：实时节点边际电价、日前节点边际电价
+    - **节点名称**：实时节点边际电价、日前节点边际电价；**选项可能由接口请求加载**，需先点击/聚焦该控件触发请求，再等待下拉列表出现后获取或选择选项。
     - 机组名称：日前机组开机安排
     - 联络线名称：日前联络线计划
     - 通道名称：输电通道可用容量
@@ -187,6 +187,10 @@
 - 部分页面展示「最新更新日期」，可用于增量更新
 - 多数页面含「原样导出」或「导出」按钮，可优先作为数据源（如日前备用总量为「原样导出」，日前机组开机安排、日前节点边际电价为「导出」）
 
+### 6.1.1 日期与节点名称控件（实现注意）
+- **日期**：控件为 el-date-editor，显示格式为 YYYY-MM-DD；设置前需等待查询区域（如 `.el-form-item`、`.el-date-editor`）加载完成，再通过「包含『日期』的 el-form-item → 其内 input」定位，避免用泛用的「text=日期」父级找 input 导致超时；输入值必须严格为 YYYY-MM-DD，否则可能设置失败。
+- **节点名称**：为 el-select，选项可能由接口请求加载；需先点击该控件触发请求，再等待下拉列表（如 `.el-select-dropdown__item`）可见后获取或选择选项；定位时优先用「包含『节点名称』的 el-form-item → 其内 .el-select .el-input__inner」。
+
 ### 6.2 分页情况
 - 断面约束：多页（如 31 页），需处理分页
 - 输变电设备检修计划、输电通道可用容量：有分页
@@ -199,3 +203,4 @@
   - 获取所有选项
   - 按需全量爬取或按配置选择部分选项
   - 选项变化时能自动适配
+- **节点名称等异步加载**：节点名称（实时/日前节点边际电价）的下拉选项可能需点击控件后才通过请求加载并渲染，自动化时需：先定位到对应 el-form-item 内的 el-select/input，点击展开 → 等待下拉列表（如 `.el-select-dropdown__item`）出现 → 再采集选项或点击目标项；未获取到选项时可降级为不选择节点名称直接按日期查询。
